--- a/src/main/webapp/app/entities/chat/chat.component.html
+++ b/src/main/webapp/app/entities/chat/chat.component.html
@@ -7,6 +7,14 @@
             Create new Chat
             </span>
         </button>
+
+
+        <button class="btn btn-primary float-right jh-create-entity create-chat" (click)="subscribe()">
+            <span class="fa fa-plus"></span>
+            <span class="hidden-sm-down">
+            Free for chat
+            </span>
+        </button>
     </h2>
     <jhi-alert></jhi-alert>
     <div class="row">
